Fix UI alignments

--- a/ui-super-heroes/src/main/webui/src/styles.css
+++ b/ui-super-heroes/src/main/webui/src/styles.css
@@ -24,8 +24,6 @@ h1 {
 }
 
 .card-pf {
-  max-width: 400px;
-  min-width: 300px;
   margin-left: 3rem;
   margin-right: 3rem;
   display: flex;
@@ -49,7 +47,10 @@ h1 {
   margin-right: 6rem;
   width: 80%;
   border-spacing: 0;
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow:
+          0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+          0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+          0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 td {
@@ -57,8 +58,6 @@ td {
 }
 
 .rounded {
-  display: inline-block;
-  position: relative;
   width: 80%;
   overflow: hidden;
   border-radius: 50%;
@@ -66,8 +65,6 @@ td {
 }
 
 .squared {
-  display: inline-block;
-  position: relative;
   width: 100%;
   overflow: hidden;
   margin-bottom: 20px;
@@ -97,6 +94,7 @@ td {
 .winner-text {
   font-weight: bold;
   font-size: large;
+  text-align: center;
 }
 
 .winner-hero {
@@ -108,35 +106,38 @@ td {
 }
 
 .hero-winner-card {
-  box-shadow: inset 0 0 10px #fff,
-  inset 20px 0 50px #77b4f0,
-  inset -20px 0 60px #5fc3d7,
-  inset 20px 0 100px #4a54ff,
-  inset -20px 0 100px #0ff,
-  0 0 50px #fff,
-  -10px 0 50px #4a54ff,
-  10px 0 50px #0ff;
+  box-shadow:
+          inset 0 0 10px #fff,
+          inset 20px 0 50px #77b4f0,
+          inset -20px 0 60px #5fc3d7,
+          inset 20px 0 100px #4a54ff,
+          inset -20px 0 100px #0ff,
+          0 0 50px #fff,
+          -10px 0 50px #4a54ff,
+          10px 0 50px #0ff;
 }
 
 .villain-winner-card {
-  box-shadow: inset 0 0 10px #fff,
-  inset 20px 0 50px #F078C2,
-  inset -20px 0 60px #D73B46,
-  inset 20px 0 100px #FF5B68,
-  inset -20px 0 100px #FF5A71,
-  0 0 50px #fff,
-  -10px 0 50px #FF5B68,
-  10px 0 50px #FF5B68;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  box-shadow:
+          inset 0 0 10px #fff,
+          inset 20px 0 50px #F078C2,
+          inset -20px 0 60px #D73B46,
+          inset 20px 0 100px #FF5B68,
+          inset -20px 0 100px #FF5A71,
+          0 0 50px #fff,
+          -10px 0 50px #FF5B68,
+          10px 0 50px #FF5B68;
 }
 
 #fight-row {
+  display: grid;
+  grid-template-columns: 35% 30% 35%;
+  grid-auto-flow: column;
+  justify-content: center;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-bottom: 30px;
+  gap: 2rem;
 }
 
 .fight-list-header {
@@ -146,7 +147,6 @@ td {
   color: white;
   font-size: medium;
   font-weight: bold;
-  height: 56px;
 }
 
 .fight-list-cell {
@@ -156,6 +156,10 @@ td {
 
 .powers {
   font-size: xx-large;
+}
+
+.character {
+  margin: 2rem;
 }
 
 .hero {
@@ -176,4 +180,3 @@ td {
   text-align: justify;
   white-space: pre-wrap;
 }
-
